Mon Aug 30 11:25:04 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: oops apparently I forgot to commit
	  the 0.0.8 release changes.

Thu Aug 26 17:28:57 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c server/gam_server.c: 
	  lot of debugging, the server was crashing, and the poll/kernel
	  switching was not done properly. Can still be improved for 
	  Changed events flood, but at least it does not crash anymore.

Wed Aug 25 21:35:36 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_inotify.c server/gam_poll.c
	  server/gam_server.c server/gam_server.h: applied patch from 
	  Martin Schlemmer to allow fallback to dnotify if inotify
	  back-end failed to initialize.

Wed Aug 25 16:38:54 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* Makefile.am NEWS configure.in doc/Makefile.am doc/contacts.html
	  doc/devel.html doc/downloads.html doc/gamin.html doc/index.html
	  doc/news.html doc/news.xsl doc/overview.html doc/site.xsl: building
	  the web site, borrowing most of the XSLT code from libxml2 project

Wed Aug 25 15:39:45 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* README doc/gamin.html: updating the documentation

Wed Aug 25 10:19:00 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_server.c: applied patch from Martin Schlemmer to
	  activate the INotify backend if configured in.

Tue Aug 24 13:52:12 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.7

Tue Aug 24 12:05:29 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO: updated reflecting new step, added reminder about 
	  annoying cases to test
	* server/gam_dnotify.c server/gam_poll.c: if a monitored
	  resource generate too much kernel events switch back automatically
	  to polling on that resources, and once things have calmed down
	  go back to kernel monitoring after 10 seconds.
