@@ -1,3 +1,8 @@
+Wed Sep  1 10:27:49 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* libgamin/gam_api.c libgamin/gam_data.c: try to fix crashes with
+	  konqueror, Red Hat bug #130967
+
 Mon Aug 30 11:25:04 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in gamin.spec.in: oops apparently I forgot to commit
